feat (css): add base styles to styles.css sheet

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* GENERAL */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 * {
   margin: 0;
@@ -7,6 +7,68 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Inter", sans-serif;
+  color: white;
+  font-weight: bold;
+  display: flex;
+   align-items: center;
+  background: black;
+  min-height: 100vh;
+  flex-direction: column;
+  padding: 20px;
+}
 
-  .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+/* LAYOUT */
+.profile-card {
+  display: flex;
+   flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  background: #3f3f3f;
+  margin: 0 auto;
+  padding: 1.5rem;
+  gap: 1rem;
+  max-width: 400px;
+  border-radius: 0.75rem;
+}
+
+/* COMPONENTS */
+img {
+  border-radius: 50%;
+}
+
+.social {
+  display: flex;
+  background: #595959;
+  border-radius: 5px;
+  text-align: center;
+}
+
+/* TYPOGRAPHY */
+h2 {
+    font-size: 15px;
+      line-height: 1.5;
+  color: rgb(123, 218, 40);
+}
+.bio p {
+  color: rgb(170, 165, 165);
+    font-size: 15px;
+      line-height: 1.5;
+      font-weight: 400;
+}
+p{
+    font-size: 15px;
+      line-height: 1.5;
+   font-weight: 400;
+}
+
+/* FOOTER */
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
