--- a/styles.css
+++ b/styles.css
@@ -26,42 +26,56 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
-  background: #3f3f3f;
+  background: #2a2a2a;
   margin: 0 auto;
   padding: 1.5rem;
-  gap: 1rem;
-  max-width: 400px;
+  width: 100%;
+  max-width: 500px;
   border-radius: 0.75rem;
 }
 
 /* COMPONENTS */
 img {
+  padding: 1rem;
   border-radius: 50%;
+  width: 150px;    
+  height: 150px;   
+  object-fit: cover; 
 }
 
 .social {
   display: flex;
-  background: #595959;
-  border-radius: 5px;
+  justify-content: center; 
+  align-items: center;
+  background: #4a4a4a;
+  border-radius: 7px;
   text-align: center;
+  margin: 14px;
+  padding: 8px;
+  width: 400px;
 }
 
 /* TYPOGRAPHY */
+h1 {
+     padding-bottom: 8px;
+}
+
 h2 {
     font-size: 15px;
-      line-height: 1.5;
-  color: rgb(123, 218, 40);
+  color: rgb(179, 226, 39);
+  padding-bottom: 10px;
 }
 .bio p {
   color: rgb(170, 165, 165);
     font-size: 15px;
-      line-height: 1.5;
-      font-weight: 400;
+    line-height: 2.5rem;
+      font-weight: 400px;
+      padding: 10px;
 }
 p{
     font-size: 15px;
-      line-height: 1.5;
    font-weight: 400;
+   padding: 0.75rem;
 }
 
 /* FOOTER */
