--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
   font-weight: bold;
   display: flex;
    align-items: center;
-  background: black;
+  background: hsl(0, 0%, 8%);
   min-height: 100vh;
   flex-direction: column;
   padding: 20px;
@@ -26,7 +26,7 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
-  background: #2a2a2a;
+  background: hsl(0, 0%, 12%);
   margin: 0 auto;
   padding: 1.5rem;
   width: 100%;
@@ -47,7 +47,7 @@ img {
   display: flex;
   justify-content: center; 
   align-items: center;
-  background: #4a4a4a;
+  background: hsl(0, 0%, 20%);
   border-radius: 7px;
   text-align: center;
   margin: 14px;
@@ -61,19 +61,19 @@ h1 {
 }
 
 h2 {
-    font-size: 15px;
-  color: rgb(179, 226, 39);
+    font-size: 14px;
+  color: hsl(75, 94%, 57%);
   padding-bottom: 10px;
 }
 .bio p {
   color: rgb(170, 165, 165);
-    font-size: 15px;
+    font-size: 14px;
     line-height: 2.5rem;
       font-weight: 400px;
       padding: 10px;
 }
 p{
-    font-size: 15px;
+    font-size: 14px;
    font-weight: 400;
    padding: 0.75rem;
 }
